--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-intl": "^6.3.2",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "sweetalert": "^2.1.2",
