--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,9 @@
     "builds": [
       {
         "src": "index.js",
-        "use": "@vercel/build-utils"
+        "config": {
+          "target": "web"
+        }
       }
     ],
     "routes": [
