--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
       {
         "src": "index.js",
         "config": {
-          "target": "web"
+          "target": "web",
+          "plugins": ["react-refresh"]
         }
       }
     ],
