--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "config": {
-          "target": "web",
-          "plugins": ["react-refresh"]
-        }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/build-react",
+      "config": {
+        "target": "web",
+        "plugins": ["react-refresh"]
       }
-    ],
-    "routes": [
-      {
-        "src": "/",
-        "dest": "/index.html"
-      }
-    ]
-  }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/index.html"
+    }
+  ]
+}
